# warc-s3

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
warc_s3/: __init__.py
