[project]
name = "warc-s3"
authors = [
    {name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de"},
]
description = "Scalable and easy WARC records storage on S3."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # "boto3~=1.28",
    # FIXME: Workaround for https://github.com/boto/boto3/issues/3738.
    "boto3~=1.28,<=1.35.99",
    "importlib-metadata>=6.5,<9.0",
    "more-itertools>=9.0,<11.0",
    "tqdm~=4.64",
    "warcio~=1.7",
]
dynamic = ["version"]

[project.optional-dependencies]
tests =[
    "bandit[toml]~=1.7",
    "boto3-stubs[s3]~=1.28",
    "mypy~=1.6",
    "pytest>=7.2,<9.0",
    "pytest-cov>=4,<7",
    "ruff>=0.2.1,<0.10.0",
    "types-tqdm~=4.66",
]

[project.urls]
"Homepage" = "https://github.com/janheinrichmerker/warc-s3"
"Bug Tracker" = "https://github.com/janheinrichmerker/warc-s3/issues"

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "build",
    "venv",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "build",
    "venv",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "build",
    "venv",
]

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"
